; ModuleID = '/home/carl/AnghaBench/i3/src/extr_commands.c_maybe_back_and_forth.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_commands.c_maybe_back_and_forth.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }
%struct.CommandResultIR = type { i32 }
%struct.TYPE_4__ = type { i32 }

@focused = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"This workspace is already focused.\0A\00", align 1
@config = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.CommandResultIR*, i8*)* @maybe_back_and_forth to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @maybe_back_and_forth(%struct.CommandResultIR* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.CommandResultIR*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  store %struct.CommandResultIR* %0, %struct.CommandResultIR** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i32, i32* @focused, align 4
  %8 = call %struct.TYPE_4__* @con_get_workspace(i32 %7)
  store %struct.TYPE_4__* %8, %struct.TYPE_4__** %6, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i8*, i8** %5, align 8
  %13 = call i64 @strcmp(i32 %11, i8* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %25

16:                                               ; preds = %2
  %17 = call i32 @DLOG(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0))
  %18 = load i64, i64* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @config, i32 0, i32 0), align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %16
  %21 = call i32 (...) @workspace_back_and_forth()
  %22 = load %struct.CommandResultIR*, %struct.CommandResultIR** %4, align 8
  %23 = getelementptr inbounds %struct.CommandResultIR, %struct.CommandResultIR* %22, i32 0, i32 0
  store i32 1, i32* %23, align 4
  br label %24

24:                                               ; preds = %20, %16
  store i32 1, i32* %3, align 4
  br label %25

25:                                               ; preds = %24, %15
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local %struct.TYPE_4__* @con_get_workspace(i32) #1

declare dso_local i64 @strcmp(i32, i8*) #1

declare dso_local i32 @DLOG(i8*) #1

declare dso_local i32 @workspace_back_and_forth(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
